feat: Crear endpoints para oficina de contratación y ordenadores
Se modifican algunas funcionalidades para cumplir con los requisitos de la funcionalidad.

udistrital/Cumplidos_y_certificaciones_documentacion#94
