# routers/commentsRouter_controllers_controladores_ordenador.go
@@ -27,9 +27,9 @@ func init() {
 
 	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers/controladores_ordenador:RevisionCumplidoOrdenadorController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers/controladores_ordenador:RevisionCumplidoOrdenadorController"],
 		beego.ControllerComments{
-			Method:           "RevertirSolicitud",
-			Router:           "/revertir-solicitud-pago/:id_solicitud_pago",
-			AllowHTTPMethods: []string{"post"},
+			Method:           "ListaCumplidosReversibles",
+			Router:           "/revertir-solicitud-pago/:id_cumplido",
+			AllowHTTPMethods: []string{"get"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
 			Params:           nil})
@@ -38,6 +38,15 @@ func init() {
 		beego.ControllerComments{
 			Method:           "ObtenerPendientesRevisionOrdenador",
 			Router:           "/solicitudes-pago/:documento_ordenador",
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
+	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers/controladores_ordenador:RevisionCumplidoOrdenadorController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers/controladores_ordenador:RevisionCumplidoOrdenadorController"],
+		beego.ControllerComments{
+			Method:           "GenerarPdf",
+			Router:           "/testpdf",
 			AllowHTTPMethods: []string{"get"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
